--- a/index.html
+++ b/index.html
@@ -34,6 +34,52 @@
         </div>
 
     </header>
+    <section>
+        <div>
+            test dialog
+        </div>
+
+    </section>
+    <footer>
+        <div class="row container-fluid">
+            <div class="col-sm-6 footermessage">
+                <h7 class="uppercase general">Looking for ballet classes in galway?</h7><br/>
+                <p class="inline-block ">
+                    We have classes in Galway City and Knocknacarra.
+                </p>
+            </div>
+
+            <div class="col-sm-6 links">
+                <h7 class="uppercase ">Links</h7><br/>
+                <ui class="list-inline social-links">
+                    <li class=" list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa fa-facebook icon" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class=" list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa fa-twitter icon" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                    </li>
+                    <li class=" list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa fa-instagram icon" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+            
+                <!---<div class=" footermessage">--->
+                <h7 class="uppercase general">Contact Us:   </h7>
+                <a href="#" target="_blank">
+                     <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
+                </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
