initial addition of files to new github  reprository

--- a/Testimonial.html
+++ b/Testimonial.html
@@ -15,7 +15,6 @@
 
 <body>
     <header>
-        <div class="bkground">
         <div class "container">
             <div class="menu">
                 <button class="buttonheader mr-auto" type="button" data-toggle="collapse" data-target="#buttondropdown" aria-expanded="false" aria-controls="navbar"><span class="bar-icon"><i class="fa fa-bars fa-lg"></i></span></button>
@@ -33,33 +32,39 @@
                 </div>
             </div>
         </div>
-        </div>
+
     </header>
     <section>
-        <div class="row margin">
-            <div class="col-sm-6 aboutregina">
-                <h5>About Regina Rogers</h5>
-                <p class="parastyle">
-                    Regina Rogers B.A. H.Dip in Ed Director Regina Rogers has been dancing since the age of 4 and teaching since 1986. Her mother, Marie Langan was a well known Ballet teacher who taught in Galway and Mayo. Marie trained in London and Paris and was a cousin
-                    of Patricia Ryan who was Artistic Director of the Irish National Ballet Company during the late 50′s and early 60′s. Regina also worked with the prestigious Bertha Carr School of Dance whilst living in th U.S. (Rhode Island) and also
-                    took Master classes at Boston Ballet. In 1995 Regina first brought the renowned Russian Ballet to Ireland with the intention of exposing students and audiences to the best of ballet. Since 1996 the Perm State Ballet of Russia have
-                    come to Galway on a regular basis and their performance is a gem in Galway’s theatrical calendar. This has greatly enhanced the appreciation of Ballet as an accessible artform in Ireland. Two years ago, Regina Rogers was honoured by
-                    the Perm State Ballet of Russia when she was invited to sit on a panel of jurors at the prestigious Arabesque Ballet Competition in Russia. The Director and founder of this competition is the renowned Vladimir Vasiliev, former Director
-                    and Dancer of the famous Bolshoi Ballet.
-                </p>
-                <img src="../assets/images/regina.jpg" width="300" height="200">
+        <div class="row">
+            <div class="col-sm-4 testimonials">
+                <h5>Laura Gaffney</h5>
+                <img src="../assets/images/laura.jpg" width="400" height="340">
+                <p>I had the absolute honour of spending sixteen years as a member of the Regina Rogers School of Ballet. From the young age of six Regina ignited a love of ballet in me, her sheer grace and dedication shone through in every aspect of her
+                    teaching. I cannot thank Regina enough for teaching me how to dance from the tips of my fingers to the tips of my toes. Every year Regina gave us the opportunity to perform in shows as well as numerous appearances at public events.
+                    Each student, regardless of grade or ability, was given an equal opportunity to shine. Behind the scenes, Regina was giving us extra practice sessions, advice and constant encouragement. Ballet requires years of hard work and patience,
+                    but the results are so rewarding. Elegance, determination and commitment are a few of the many traits Regina instills in her students. I attended her classes from senior infants until well into my college years. I will be forever grateful
+                    to Regina, not only for the skills I have learned(and earned!), but for her kindness and friendship throughout.</p>
             </div>
-            <div class="col-sm-6 aboutschool">
-                <h5>Tchaikovsky Perm State Ballet of Russia</h5>
-                <img src="../assets/images/mainpage.jpg" width="300" height="200">
-                <p class="parastyle">
-                    In 1995 Regina first brought the renowned Tchaikovsky Perm State Russian Ballet to Ireland with the intention of exposing students and audiences to the best of ballet. Since 1996 the Perm State Ballet of Russia have come to Galway on a regular basis and
-                    their performance is a gem in Galway’s theatrical calendar. This has greatly enhanced the appreciation of Ballet as an accessible artform in Ireland. Regina Rogers was honoured by the Perm State Ballet of Russia when she was invited
-                    to sit on a panel of jurors at the prestigious Arabesque Ballet Competition in Russia. The Director and founder of this competition is the renowned Vladimir Vasiliev, former Director and Dancer of the famous Bolshoi Ballet. We are
-                    delighted to announce that Perm Ballet have recently confirmed that because of our close links they are very keen to establish their Russian Ballet Examination Syllabus with my school. Of course this will take time but it is a fantastic
-                    opportunity and honour for us. Thank you Aleksey Miroshnichenko, Artistic Director of Perm State Ballet.
-                </p>
-
+            <div class="col-sm-4 testimonials">
+                <h5>Daragh Keaveney</h5>
+                <img src="../assets/images/Daragh.jpg" width="400" height="340">
+                <p>I was a student with Regina for thirteen years, taking class twice a week in ballet and jazz. For all that time, Regina and all the various teachers I’ve had have been amazing. I received great technical training in my time with the school,
+                    as well as so many performance opportunities. I have always been encouraged and supported by everyone at the school and that helped me go on to pursue further training and a career in dance. Regina helped me discover my love of dance
+                    and performance at an early age and I wouldn’t be the dancer I am today without everything her and the teachers at Regina Rogers School of Ballet have done for me. Daragh was accepted into the Broadway Academy, New York.</p>
+            </div>
+            <div class="col-sm-4 testimonials">
+                <h5>Gabriella Markov</h5>
+                <img src="../assets/images/gabriella.jpg" width="400" height="340">
+                <p>“I’ve loved my year with Regina Rogers School of Ballet SO much, I don’t think I’ve ever loved Ballet more—-I’ve learned so much from brilliant teachers. The atmosphere is always fantastic, the girls were always kind to me, I’ve had fun
+                    every time and I’ve learned twice as much from this atmosphere than any nasty one! One of the best experiences of my life was appearing on stage with the Perm State Ballet of Russia——-I will never ever forget it. Thank you for giving
+                    me all those experiences”. Thank you for inspiring me. Senior student Gabriella Markov who returned home to Australia.</p>
+            </div>
+            <div class="col-sm-4 testimonials">
+                <h5>Catherine Walsh</h5>
+                 <img src="../assets/images/Catherine.jpg" width="400" height="340">
+                <p>I began ballet at the age of 6 at the Regina Rogers School of Ballet and it was there that I developed my love for ballet. I gained great experiences from my time there, getting the opportunities to do summer schools with Russian trained
+                    dancers was what made me want to go on and study ballet further at a more serious level. I loved all the opportunities we got to perform at all kinds of events and I am extremely grateful to Regina for all the help and support she
+                    has given me over the 12 years I attended the school. Catherine went on to study ballet through College of Dance Dublin and London Studio Centre.</p>
             </div>
         </div>
     </section>
@@ -71,6 +76,7 @@
                     We have classes in Galway City and Knocknacarra.
                 </p>
             </div>
+
             <div class="col-sm-6 links">
                 <h7 class="uppercase ">Links</h7><br/>
                 <ui class="list-inline social-links">
@@ -92,6 +98,7 @@
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
+
                     <!---<div class=" footermessage">--->
                     <h7 class="uppercase general">Contact Us: </h7>
                     <a href="#" target="_blank">
@@ -101,6 +108,7 @@
         </div>
         </div>
     </footer>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
