--- a/Contact.html
+++ b/Contact.html
@@ -15,7 +15,6 @@
 
 <body>
     <header>
-        <div class="bkground">
         <div class "container">
             <div class="menu">
                 <button class="buttonheader mr-auto" type="button" data-toggle="collapse" data-target="#buttondropdown" aria-expanded="false" aria-controls="navbar"><span class="bar-icon"><i class="fa fa-bars fa-lg"></i></span></button>
@@ -33,33 +32,37 @@
                 </div>
             </div>
         </div>
-        </div>
-    </header>
-    <section>
-        <div class="row margin">
-            <div class="col-sm-6 aboutregina">
-                <h5>About Regina Rogers</h5>
-                <p class="parastyle">
-                    Regina Rogers B.A. H.Dip in Ed Director Regina Rogers has been dancing since the age of 4 and teaching since 1986. Her mother, Marie Langan was a well known Ballet teacher who taught in Galway and Mayo. Marie trained in London and Paris and was a cousin
-                    of Patricia Ryan who was Artistic Director of the Irish National Ballet Company during the late 50′s and early 60′s. Regina also worked with the prestigious Bertha Carr School of Dance whilst living in th U.S. (Rhode Island) and also
-                    took Master classes at Boston Ballet. In 1995 Regina first brought the renowned Russian Ballet to Ireland with the intention of exposing students and audiences to the best of ballet. Since 1996 the Perm State Ballet of Russia have
-                    come to Galway on a regular basis and their performance is a gem in Galway’s theatrical calendar. This has greatly enhanced the appreciation of Ballet as an accessible artform in Ireland. Two years ago, Regina Rogers was honoured by
-                    the Perm State Ballet of Russia when she was invited to sit on a panel of jurors at the prestigious Arabesque Ballet Competition in Russia. The Director and founder of this competition is the renowned Vladimir Vasiliev, former Director
-                    and Dancer of the famous Bolshoi Ballet.
-                </p>
-                <img src="../assets/images/regina.jpg" width="300" height="200">
-            </div>
-            <div class="col-sm-6 aboutschool">
-                <h5>Tchaikovsky Perm State Ballet of Russia</h5>
-                <img src="../assets/images/mainpage.jpg" width="300" height="200">
-                <p class="parastyle">
-                    In 1995 Regina first brought the renowned Tchaikovsky Perm State Russian Ballet to Ireland with the intention of exposing students and audiences to the best of ballet. Since 1996 the Perm State Ballet of Russia have come to Galway on a regular basis and
-                    their performance is a gem in Galway’s theatrical calendar. This has greatly enhanced the appreciation of Ballet as an accessible artform in Ireland. Regina Rogers was honoured by the Perm State Ballet of Russia when she was invited
-                    to sit on a panel of jurors at the prestigious Arabesque Ballet Competition in Russia. The Director and founder of this competition is the renowned Vladimir Vasiliev, former Director and Dancer of the famous Bolshoi Ballet. We are
-                    delighted to announce that Perm Ballet have recently confirmed that because of our close links they are very keen to establish their Russian Ballet Examination Syllabus with my school. Of course this will take time but it is a fantastic
-                    opportunity and honour for us. Thank you Aleksey Miroshnichenko, Artistic Director of Perm State Ballet.
-                </p>
 
+    </header>
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col bg-color-contact">
+                <h3 class="contact-heading  text-center">CONTACT US!</h3>
+                <h5 class="text-center">Want to get in touch! Please use the contact form below. We will try to respond ASAP</h5>
+                <div class="center-form formbg">
+                    <form>
+                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+                        <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject" required />
+                        <textarea rows="5" name="query" id="query" class="form-control" placeholder="How can we help?" required></textarea>
+                        <div class="form-row text-center">
+                            <div class="col">
+                                <button type="submit" class="btn btn-success">Submit Query</button>
+                                <button  type="submit" class="btn btn-danger">Reset Form</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col bg-color-details">
+                <h4>Contact Details</h4>
+                <ul>
+                    <li>Regina Rogers</li>
+                    <li>Phone: 091 522 267</li>
+                    <li>Email: galwayballet@gmail.com</li>
+                </ul>
             </div>
         </div>
     </section>
@@ -71,6 +74,7 @@
                     We have classes in Galway City and Knocknacarra.
                 </p>
             </div>
+
             <div class="col-sm-6 links">
                 <h7 class="uppercase ">Links</h7><br/>
                 <ui class="list-inline social-links">
@@ -92,15 +96,17 @@
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
-                    <!---<div class=" footermessage">--->
-                    <h7 class="uppercase general">Contact Us: </h7>
-                    <a href="#" target="_blank">
+            
+                <!---<div class=" footermessage">--->
+                <h7 class="uppercase general">Contact Us: </h7>
+                <a href="#" target="_blank">
                      <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
                 </a>
+                </div>
             </div>
         </div>
-        </div>
     </footer>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
