--- a/Gallery.html
+++ b/Gallery.html
@@ -35,6 +35,7 @@
 
     </header>
     <section>
+        <h2 class=heading>Gallery</h2>
         <div class="row">
             <div class="col-sm3 gallery text-center">
                 <img src="../assets/images/westexpo.jpg" width=300 height=200>
