--- a/Testimonial.html
+++ b/Testimonial.html
@@ -35,6 +35,7 @@
 
     </header>
     <section>
+        <h2 class=heading>Testimonials</h2>
         <div class="row">
             <div class="col-sm-4 testimonials">
                 <h5>Laura Gaffney</h5>
