--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="assets/CSS/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/CSS/style1.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Exo|Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <title>Regina Rogers</title>
@@ -15,32 +15,28 @@
 
 <body>
     <header>
-        <div class "container">
-            <div class="menu">
-                <button class="buttonheader mr-auto" type="button" data-toggle="collapse" data-target="#buttondropdown" aria-expanded="false" aria-controls="navbar"><span class="bar-icon"><i class="fa fa-bars fa-lg"></i></span></button>
-                <div class="collapse button-collapse" id="buttondropdown">
-                    <nav>
-                        <ul id="navbar" Class="list-inline navcenter">
-                            <a href="index.html" class=" col-12  col-2 amenu"><i class="icon fa fa-home fa-lg"></i><span>Home</span></a>
-                            <a href="Classes.html" class="col-12  col-2 amenu"><i class="icon fa fa-graduation-cap fa-lg"></i><span>Classes</span></a>
-                            <a href="News.html" class="col-12  col-2 amenu"><i class="icon fa fa-calendar fa-lg"></i><span>News & Events</span></a>
-                            <a href="Testimonial.html" class="col-12 col-2 amenu"><i class="icon fa fa-quote-right fa-lg"></i><span>Testimonials</span></a>
-                            <a href="Gallery.html" class="col-12  col-2 amenu"><i class="icon fa fa-image fa-lg"></i><span>Gallery</span></a>
-                            <a href="Contact.html" class="col-12  col-2 amenu"><i class="icon fa fa-phone-square fa-lg"></i><span>Contact Us</span></a>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
+        <div class="navbar ">
+            <ul>
+                <li><a href="index.html" class=" col-12  col-2"><i class="fa fa-home fa-lg"> Home</i></a></li>
+                <li><a href="Classes.html" class=" col-12  col-2"><i class="fa fa-graduation-cap fa-lg"> Classes</i></a></li>
+                <li><a href="News.html" class=" col-12  col-2"><i class="fa fa-calendar fa-lg"> News & Events</i></a></li>
+                <li><a href="Testimonial.html" class=" col-12  col-2"><i class="fa fa-quote-right fa-lg"> Testimonials</i></a></li>
+                <li><a href="Gallery.html" class=" col-12  col-2"><i class="fa fa-image fa-lg"> Gallery</i></a></li>
+                <li><a href="Contact.html" class="active col-12  col-2"><i class="fa fa-phone-square fa-lg"> Contact Us</i></a></li>
+            </ul>
         </div>
-
     </header>
     <section class="container-fluid">
+        <div class="logo">
+            <!---logo--->
+        </div>
         <div class="row">
-            <div class="col bg-color-contact">
+            <div class="col-12 ">
                 <h3 class="contact-heading  text-center">CONTACT US!</h3>
                 <h5 class="text-center">Want to get in touch! Please use the contact form below. We will try to respond ASAP</h5>
-                <div class="center-form formbg">
-                    <form>
+                </br>
+                <div class=" col center-form formbg">
+                    <form id="formstyle">
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
                         <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
                         <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject" required />
@@ -48,62 +44,44 @@
                         <div class="form-row text-center">
                             <div class="col">
                                 <button type="submit" class="btn btn-success">Submit Query</button>
-                                <button  type="submit" class="btn btn-danger">Reset Form</button>
+                                <button type="submit" class="btn btn-danger">Reset Form</button>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col bg-color-details">
-                <h4>Contact Details</h4>
+            <div class="col contact-heading">
+                <h4 class="cheader text-center">Contact Details</h4>
                 <ul>
-                    <li>Regina Rogers</li>
-                    <li>Phone: 091 522 267</li>
-                    <li>Email: galwayballet@gmail.com</li>
+                    <li class="col-4 text-center">Regina Rogers</li>
+                    <li class="col-4 text-center">Phone: 091 522 267</li>
+                    <li class="col-4 text-center">Email: galwayballet@gmail.com</li>
                 </ul>
             </div>
         </div>
     </section>
     <footer>
-        <div class="row container-fluid">
-            <div class="col-sm-6 footermessage">
-                <h7 class="uppercase general">Looking for ballet classes in galway?</h7><br/>
-                <p class="inline-block ">
-                    We have classes in Galway City and Knocknacarra.
-                </p>
-            </div>
-
-            <div class="col-sm-6 links">
-                <h7 class="uppercase ">Links</h7><br/>
-                <ui class="list-inline social-links">
-                    <li class=" list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-facebook icon" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class=" list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-twitter icon" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
-                    </li>
-                    <li class=" list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram icon" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-            
-                <!---<div class=" footermessage">--->
-                <h7 class="uppercase general">Contact Us: </h7>
+        <div class="footermessage">
+            <h7 class="uppercase general">Looking for ballet classes in galway?</h7><br/>
+            <p class="inline-block footermessage">
+                We have classes in Galway City and Knocknacarra.
+                <br> Contact Us:
                 <a href="#" target="_blank">
                      <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
-                </a>
-                </div>
-            </div>
+                    </a>
+                <a target="_blank" href="#">
+                            <i class="fa fa-facebook infobutton " aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                <a target="_blank" href="#">
+                            <i class="fa fa-twitter infobutton " aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                <a target="_blank" href="#">
+                            <i class="fa fa-instagram infobutton " aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+            </p>
         </div>
     </footer>
 
