--- a/Gallery.html
+++ b/Gallery.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="assets/CSS/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/CSS/style1.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Exo|Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <title>Regina Rogers</title>
@@ -15,26 +15,21 @@
 
 <body>
     <header>
-        <div class "container">
-            <div class="menu">
-                <button class="buttonheader mr-auto" type="button" data-toggle="collapse" data-target="#buttondropdown" aria-expanded="false" aria-controls="navbar"><span class="bar-icon"><i class="fa fa-bars fa-lg"></i></span></button>
-                <div class="collapse button-collapse" id="buttondropdown">
-                    <nav>
-                        <ul id="navbar" Class="list-inline navcenter">
-                            <a href="index.html" class=" col-12  col-2 amenu"><i class="icon fa fa-home fa-lg"></i><span>Home</span></a>
-                            <a href="Classes.html" class="col-12  col-2 amenu"><i class="icon fa fa-graduation-cap fa-lg"></i><span>Classes</span></a>
-                            <a href="News.html" class="col-12  col-2 amenu"><i class="icon fa fa-calendar fa-lg"></i><span>News & Events</span></a>
-                            <a href="Testimonial.html" class="col-12 col-2 amenu"><i class="icon fa fa-quote-right fa-lg"></i><span>Testimonials</span></a>
-                            <a href="Gallery.html" class="col-12  col-2 amenu"><i class="icon fa fa-image fa-lg"></i><span>Gallery</span></a>
-                            <a href="Contact.html" class="col-12  col-2 amenu"><i class="icon fa fa-phone-square fa-lg"></i><span>Contact Us</span></a>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
+        <div class="navbar ">
+            <ul>
+                <li><a href="index.html" class=" col-12  col-2"><i class="fa fa-home fa-lg"> Home</i></a></li>
+                <li><a href="Classes.html" class=" col-12  col-2"><i class="fa fa-graduation-cap fa-lg"> Classes</i></a></li>
+                <li><a href="News.html" class=" col-12  col-2"><i class="fa fa-calendar fa-lg"> News & Events</i></a></li>
+                <li><a href="Testimonial.html" class=" col-12  col-2"><i class="fa fa-quote-right fa-lg"> Testimonials</i></a></li>
+                <li><a href="Gallery.html" class="active col-12  col-2"><i class="fa fa-image fa-lg"> Gallery</i></a></li>
+                <li><a href="Contact.html" class=" col-12  col-2"><i class="fa fa-phone-square fa-lg"> Contact Us</i></a></li>
+            </ul>
         </div>
-
     </header>
-    <section>
+    <section class="container-fluid">
+        <div class="logo">
+            <!---logo--->
+        </div>
         <h2 class=heading>Gallery</h2>
         <div class="row">
             <div class="col-sm3 gallery text-center">
@@ -74,43 +69,27 @@
         </div>
     </section>
     <footer>
-        <div class="row container-fluid">
-            <div class="col-sm-6 footermessage">
-                <h7 class="uppercase general">Looking for ballet classes in galway?</h7><br/>
-                <p class="inline-block ">
-                    We have classes in Galway City and Knocknacarra.
-                </p>
-            </div>
-
-            <div class="col-sm-6 links">
-                <h7 class="uppercase ">Links</h7><br/>
-                <ui class="list-inline social-links">
-                    <li class=" list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-facebook icon" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class=" list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-twitter icon" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
-                    </li>
-                    <li class=" list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram icon" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-            
-                <!---<div class=" footermessage">--->
-                <h7 class="uppercase general">Contact Us: </h7>
+        <div class="footermessage">
+            <h7 class="uppercase general">Looking for ballet classes in galway?</h7><br/>
+            <p class="inline-block footermessage">
+                We have classes in Galway City and Knocknacarra.
+                <br> Contact Us:
                 <a href="#" target="_blank">
                      <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
-                </a>
-                </div>
-            </div>
+                    </a>
+                <a target="_blank" href="#">
+                            <i class="fa fa-facebook infobutton " aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                <a target="_blank" href="#">
+                            <i class="fa fa-twitter infobutton " aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                <a target="_blank" href="#">
+                            <i class="fa fa-instagram infobutton " aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+            </p>
         </div>
     </footer>
 
