--- a/Testimonial.html
+++ b/Testimonial.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="assets/CSS/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/CSS/style1.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Exo|Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <title>Regina Rogers</title>
@@ -15,101 +15,84 @@
 
 <body>
     <header>
-        <div class "container">
-            <div class="menu">
-                <button class="buttonheader mr-auto" type="button" data-toggle="collapse" data-target="#buttondropdown" aria-expanded="false" aria-controls="navbar"><span class="bar-icon"><i class="fa fa-bars fa-lg"></i></span></button>
-                <div class="collapse button-collapse" id="buttondropdown">
-                    <nav>
-                        <ul id="navbar" Class="list-inline navcenter">
-                            <a href="index.html" class=" col-12  col-2 amenu"><i class="icon fa fa-home fa-lg"></i><span>Home</span></a>
-                            <a href="Classes.html" class="col-12  col-2 amenu"><i class="icon fa fa-graduation-cap fa-lg"></i><span>Classes</span></a>
-                            <a href="News.html" class="col-12  col-2 amenu"><i class="icon fa fa-calendar fa-lg"></i><span>News & Events</span></a>
-                            <a href="Testimonial.html" class="col-12 col-2 amenu"><i class="icon fa fa-quote-right fa-lg"></i><span>Testimonials</span></a>
-                            <a href="Gallery.html" class="col-12  col-2 amenu"><i class="icon fa fa-image fa-lg"></i><span>Gallery</span></a>
-                            <a href="Contact.html" class="col-12  col-2 amenu"><i class="icon fa fa-phone-square fa-lg"></i><span>Contact Us</span></a>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
+        <div class="navbar ">
+            <ul>
+                <li><a href="index.html" class=" col-12  col-2"><i class="fa fa-home fa-lg"> Home</i></a></li>
+                <li><a href="Classes.html" class=" col-12  col-2"><i class="fa fa-graduation-cap fa-lg"> Classes</i></a></li>
+                <li><a href="News.html" class=" col-12  col-2"><i class="fa fa-calendar fa-lg"> News & Events</i></a></li>
+                <li><a href="Testimonial.html" class="active col-12  col-2"><i class="fa fa-quote-right fa-lg"> Testimonials</i></a></li>
+                <li><a href="Gallery.html" class=" col-12  col-2"><i class="fa fa-image fa-lg"> Gallery</i></a></li>
+                <li><a href="Contact.html" class=" col-12  col-2"><i class="fa fa-phone-square fa-lg"> Contact Us</i></a></li>
+            </ul>
         </div>
-
     </header>
-    <section>
+    <section class="container-fluid">
+        <div class="logo">
+            <!---logo--->
+        </div>
         <h2 class=heading>Testimonials</h2>
         <div class="row">
-            <div class="col-sm-4 testimonials">
+            <div class="col-sm-5 testimonials">
                 <h5>Laura Gaffney</h5>
-                <img src="../assets/images/laura.jpg" width="400" height="340">
                 <p>I had the absolute honour of spending sixteen years as a member of the Regina Rogers School of Ballet. From the young age of six Regina ignited a love of ballet in me, her sheer grace and dedication shone through in every aspect of her
                     teaching. I cannot thank Regina enough for teaching me how to dance from the tips of my fingers to the tips of my toes. Every year Regina gave us the opportunity to perform in shows as well as numerous appearances at public events.
                     Each student, regardless of grade or ability, was given an equal opportunity to shine. Behind the scenes, Regina was giving us extra practice sessions, advice and constant encouragement. Ballet requires years of hard work and patience,
                     but the results are so rewarding. Elegance, determination and commitment are a few of the many traits Regina instills in her students. I attended her classes from senior infants until well into my college years. I will be forever grateful
                     to Regina, not only for the skills I have learned(and earned!), but for her kindness and friendship throughout.</p>
+                <img src="../assets/images/laura.jpg" width="400" height="340">
+                </div>
+            <div class="col-sm-1">
             </div>
-            <div class="col-sm-4 testimonials">
+            <div class="col-sm-5 testimonials">
                 <h5>Daragh Keaveney</h5>
                 <img src="../assets/images/Daragh.jpg" width="400" height="340">
                 <p>I was a student with Regina for thirteen years, taking class twice a week in ballet and jazz. For all that time, Regina and all the various teachers I’ve had have been amazing. I received great technical training in my time with the school,
                     as well as so many performance opportunities. I have always been encouraged and supported by everyone at the school and that helped me go on to pursue further training and a career in dance. Regina helped me discover my love of dance
                     and performance at an early age and I wouldn’t be the dancer I am today without everything her and the teachers at Regina Rogers School of Ballet have done for me. Daragh was accepted into the Broadway Academy, New York.</p>
             </div>
-            <div class="col-sm-4 testimonials">
+        
+            <div class="col-sm-5 testimonials">
                 <h5>Gabriella Markov</h5>
                 <img src="../assets/images/gabriella.jpg" width="400" height="340">
                 <p>“I’ve loved my year with Regina Rogers School of Ballet SO much, I don’t think I’ve ever loved Ballet more—-I’ve learned so much from brilliant teachers. The atmosphere is always fantastic, the girls were always kind to me, I’ve had fun
                     every time and I’ve learned twice as much from this atmosphere than any nasty one! One of the best experiences of my life was appearing on stage with the Perm State Ballet of Russia——-I will never ever forget it. Thank you for giving
                     me all those experiences”. Thank you for inspiring me. Senior student Gabriella Markov who returned home to Australia.</p>
             </div>
-            <div class="col-sm-4 testimonials">
+            <div class="col-sm-1">
+            </div>
+            <div class="col-sm-5 testimonials">
                 <h5>Catherine Walsh</h5>
-                 <img src="../assets/images/Catherine.jpg" width="400" height="340">
                 <p>I began ballet at the age of 6 at the Regina Rogers School of Ballet and it was there that I developed my love for ballet. I gained great experiences from my time there, getting the opportunities to do summer schools with Russian trained
                     dancers was what made me want to go on and study ballet further at a more serious level. I loved all the opportunities we got to perform at all kinds of events and I am extremely grateful to Regina for all the help and support she
                     has given me over the 12 years I attended the school. Catherine went on to study ballet through College of Dance Dublin and London Studio Centre.</p>
+            <img src="../assets/images/Catherine.jpg" width="400" height="340">
             </div>
         </div>
     </section>
     <footer>
-        <div class="row container-fluid">
-            <div class="col-sm-6 footermessage">
-                <h7 class="uppercase general">Looking for ballet classes in galway?</h7><br/>
-                <p class="inline-block ">
-                    We have classes in Galway City and Knocknacarra.
-                </p>
-            </div>
-
-            <div class="col-sm-6 links">
-                <h7 class="uppercase ">Links</h7><br/>
-                <ui class="list-inline social-links">
-                    <li class=" list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-facebook icon" aria-hidden="true"></i>
+        <div class="footermessage">
+            <h7 class="uppercase general">Looking for ballet classes in galway?</h7><br/>
+            <p class="inline-block footermessage">
+                We have classes in Galway City and Knocknacarra.
+                <br> Contact Us:
+                <a href="#" target="_blank">
+                     <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
+                    </a>
+                <a target="_blank" href="#">
+                            <i class="fa fa-facebook infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
-                    </li>
-                    <li class=" list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-twitter icon" aria-hidden="true"></i>
+                <a target="_blank" href="#">
+                            <i class="fa fa-twitter infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
-                    </li>
-                    <li class=" list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram icon" aria-hidden="true"></i>
+                <a target="_blank" href="#">
+                            <i class="fa fa-instagram infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
-                    </li>
-
-                    <!---<div class=" footermessage">--->
-                    <h7 class="uppercase general">Contact Us: </h7>
-                    <a href="#" target="_blank">
-                     <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
-                </a>
-            </div>
-        </div>
+            </p>
         </div>
     </footer>
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
