--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="assets/CSS/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/CSS/style1.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Exo|Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <title>Regina Rogers</title>
@@ -15,30 +14,25 @@
 
 <body>
     <header>
-        <div class="bkground">
-        <div class "container">
-            <div class="menu">
-                <button class="buttonheader mr-auto" type="button" data-toggle="collapse" data-target="#buttondropdown" aria-expanded="false" aria-controls="navbar"><span class="bar-icon"><i class="fa fa-bars fa-lg"></i></span></button>
-                <div class="collapse button-collapse" id="buttondropdown">
-                    <nav>
-                        <ul id="navbar" Class="list-inline navcenter">
-                            <a href="index.html" class=" col-12  col-2 amenu"><i class="icon fa fa-home fa-lg"></i><span>Home</span></a>
-                            <a href="Classes.html" class="col-12  col-2 amenu"><i class="icon fa fa-graduation-cap fa-lg"></i><span>Classes</span></a>
-                            <a href="News.html" class="col-12  col-2 amenu"><i class="icon fa fa-calendar fa-lg"></i><span>News & Events</span></a>
-                            <a href="Testimonial.html" class="col-12 col-2 amenu"><i class="icon fa fa-quote-right fa-lg"></i><span>Testimonials</span></a>
-                            <a href="Gallery.html" class="col-12  col-2 amenu"><i class="icon fa fa-image fa-lg"></i><span>Gallery</span></a>
-                            <a href="Contact.html" class="col-12  col-2 amenu"><i class="icon fa fa-phone-square fa-lg"></i><span>Contact Us</span></a>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </div>
+        <div class="navbar ">
+             <ul>
+                <li><a href="index.html" class="active col-12  col-2"><i class="fa fa-home fa-lg"> Home</i></a></li>
+                <li><a href="Classes.html" class=" col-12  col-2"><i class="fa fa-graduation-cap fa-lg"> Classes</i></a></li>
+                <li><a href="News.html" class=" col-12  col-2"><i class="fa fa-calendar fa-lg"> News & Events</i></a></li>
+                <li><a href="Testimonial.html" class=" col-12  col-2"><i class="fa fa-quote-right fa-lg"> Testimonials</i></a></li>
+                <li><a href="Gallery.html" class=" col-12  col-2"><i class="fa fa-image fa-lg"> Gallery</i></a></li>
+                <li><a href="Contact.html" class=" col-12  col-2"><i class="fa fa-phone-square fa-lg"> Contact Us</i></a></li>
+            </ul>
         </div>
     </header>
     <section>
-        <div class="row margin">
-            <div class="col-sm-6 aboutregina">
-                <h5>About Regina Rogers</h5>
+        <div class="logo">
+            <!---logo--->
+        </div>
+        
+        <div class="row margin ">
+            <div class="col-sm-6 paragraph ">
+                <h4 class="headerstyle">About Regina Rogers</h4>
                 <p class="parastyle">
                     Regina Rogers B.A. H.Dip in Ed Director Regina Rogers has been dancing since the age of 4 and teaching since 1986. Her mother, Marie Langan was a well known Ballet teacher who taught in Galway and Mayo. Marie trained in London and Paris and was a cousin
                     of Patricia Ryan who was Artistic Director of the Irish National Ballet Company during the late 50′s and early 60′s. Regina also worked with the prestigious Bertha Carr School of Dance whilst living in th U.S. (Rhode Island) and also
@@ -47,11 +41,11 @@
                     the Perm State Ballet of Russia when she was invited to sit on a panel of jurors at the prestigious Arabesque Ballet Competition in Russia. The Director and founder of this competition is the renowned Vladimir Vasiliev, former Director
                     and Dancer of the famous Bolshoi Ballet.
                 </p>
-                <img src="../assets/images/regina.jpg" width="300" height="200">
+                <img src="../images/regina.jpg" width="300" height="200">
             </div>
-            <div class="col-sm-6 aboutschool">
-                <h5>Tchaikovsky Perm State Ballet of Russia</h5>
-                <img src="../assets/images/mainpage.jpg" width="300" height="200">
+            <div class="col-sm-6 paragraph">
+                <h4 class="headerstyle">Tchaikovsky Perm State Ballet of Russia</h4>
+                <img src="../assets/mainpage.jpg" width="300" height="200">
                 <p class="parastyle">
                     In 1995 Regina first brought the renowned Tchaikovsky Perm State Russian Ballet to Ireland with the intention of exposing students and audiences to the best of ballet. Since 1996 the Perm State Ballet of Russia have come to Galway on a regular basis and
                     their performance is a gem in Galway’s theatrical calendar. This has greatly enhanced the appreciation of Ballet as an accessible artform in Ireland. Regina Rogers was honoured by the Perm State Ballet of Russia when she was invited
@@ -59,50 +53,37 @@
                     delighted to announce that Perm Ballet have recently confirmed that because of our close links they are very keen to establish their Russian Ballet Examination Syllabus with my school. Of course this will take time but it is a fantastic
                     opportunity and honour for us. Thank you Aleksey Miroshnichenko, Artistic Director of Perm State Ballet.
                 </p>
-
             </div>
+            
         </div>
-    </section>
+    </section> 
     <footer>
-        <div class="row container-fluid">
-            <div class="col-sm-6 footermessage">
+        <div class="footermessage">
                 <h7 class="uppercase general">Looking for ballet classes in galway?</h7><br/>
-                <p class="inline-block ">
+                <p class="inline-block footermessage">
                     We have classes in Galway City and Knocknacarra.
-                </p>
-            </div>
-            <div class="col-sm-6 links">
-                <h7 class="uppercase ">Links</h7><br/>
-                <ui class="list-inline social-links">
-                    <li class=" list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-facebook icon" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class=" list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-twitter icon" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
-                    </li>
-                    <li class=" list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram icon" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-                    <!---<div class=" footermessage">--->
-                    <h7 class="uppercase general">Contact Us: </h7>
+                    <br>
+                    Contact Us:
                     <a href="#" target="_blank">
                      <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
-                </a>
-            </div>
-        </div>
+                    </a>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-facebook infobutton " aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-twitter infobutton " aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-instagram infobutton " aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                </p>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-</body>
+</body> 
+   
