fixed issues with pictures and added contact links

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                     the Perm State Ballet of Russia when she was invited to sit on a panel of jurors at the prestigious Arabesque Ballet Competition in Russia. The Director and founder of this competition is the renowned Vladimir Vasiliev, former Director
                     and Dancer of the famous Bolshoi Ballet.
                 </p>
-                <img src="../images/regina.jpg" width="300" height="200">
+                <img src="assets/images/regina.jpg" alt="Regina picture" width="600" height="400"/>
             </div>
             <div class="col-sm-6 paragraph">
                 <h4 class="headerstyle">Tchaikovsky Perm State Ballet of Russia</h4>
-                <img src="../assets/mainpage.jpg" width="300" height="200">
+                <img src="assets/images/mainpage.jpg" alt="Perm State Ballet" width="600" height="400"/>
                 <p class="parastyle">
                     In 1995 Regina first brought the renowned Tchaikovsky Perm State Russian Ballet to Ireland with the intention of exposing students and audiences to the best of ballet. Since 1996 the Perm State Ballet of Russia have come to Galway on a regular basis and
                     their performance is a gem in Galway’s theatrical calendar. This has greatly enhanced the appreciation of Ballet as an accessible artform in Ireland. Regina Rogers was honoured by the Perm State Ballet of Russia when she was invited
@@ -64,18 +64,18 @@
                     We have classes in Galway City and Knocknacarra.
                     <br>
                     Contact Us:
-                    <a href="#" target="_blank">
+                    <a href="Contact.html" target="_blank">
                      <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
                     </a>
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.facebook.com/Regina-Rogers-School-of-Ballet-568812096482190/">
                             <i class="fa fa-facebook infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://twitter.com/Twitter">
                             <i class="fa fa-twitter infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.instagram.com/instagram/">
                             <i class="fa fa-instagram infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
