--- a/Classes.html
+++ b/Classes.html
@@ -174,18 +174,18 @@
                     We have classes in Galway City and Knocknacarra.
                     <br>
                     Contact Us:
-                    <a href="#" target="_blank">
+                    <a href="Contact.html" target="_blank">
                      <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
                     </a>
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.facebook.com/Regina-Rogers-School-of-Ballet-568812096482190/">
                             <i class="fa fa-facebook infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://twitter.com/Twitter">
                             <i class="fa fa-twitter infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.instagram.com/instagram/">
                             <i class="fa fa-instagram infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
