--- a/Contact.html
+++ b/Contact.html
@@ -64,24 +64,25 @@
         <div class="footermessage">
             <h7 class="uppercase general">Looking for ballet classes in galway?</h7><br/>
             <p class="inline-block footermessage">
-                We have classes in Galway City and Knocknacarra.
-                <br> Contact Us:
-                <a href="#" target="_blank">
+                    We have classes in Galway City and Knocknacarra.
+                    <br>
+                    Contact Us:
+                    <a href="Contact.html" target="_blank">
                      <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
                     </a>
-                <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.facebook.com/Regina-Rogers-School-of-Ballet-568812096482190/">
                             <i class="fa fa-facebook infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
-                <a target="_blank" href="#">
+                        <a target="_blank" href="https://twitter.com/Twitter">
                             <i class="fa fa-twitter infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
-                <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.instagram.com/instagram/">
                             <i class="fa fa-instagram infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
-            </p>
+                </p>
         </div>
     </footer>
 
