--- a/Gallery.html
+++ b/Gallery.html
@@ -33,37 +33,37 @@
         <h2 class=heading>Gallery</h2>
         <div class="row">
             <div class="col-sm3 gallery text-center">
-                <img src="../assets/images/westexpo.jpg" width=300 height=200>
+                <img src="assets/images/westexpo.jpg" alt="West Expo" width=300 height=200>
                 <h6>Students attending West Expo</h6>
             </div>
-             <div class="col-sm3 gallery text-center">
-                <img src="../assets/images/WestExpo2.jpg" width=300 height=200>
+            <div class="col-sm3 gallery text-center">
+                <img src="assets/images/WestExpo2.jpg" alt="West Expo2" width=300 height=200>
                 <h6>Preparing for West Expo</h6>
             </div>
-             <div class="col-sm3 gallery text-center">
-                <img src="../assets/images/permstudentspic.jpg" width=300 height=200>
+            <div class="col-sm3 gallery text-center">
+                <img src="assets/images/permstudentspic.jpg" alt="perm students pic" width=300 height=200>
                 <h6>Perm State Ballet</h6>
             </div>
-             <div class="col-sm3 gallery text-center">
-                <img src="../assets/images/vitaliystudents.jpg" width=300 height=200>
+            <div class="col-sm3 gallery text-center">
+                <img src="assets/images/vitaliystudents.jpg" alt="vitaliy students" width=300 height=200>
                 <h6>Perm principal student workshop</h6>
             </div>
         </div>
         <div class="row">
             <div class="col-sm3 gallery text-center">
-                <img src="../assets/images/ARAS.jpg" width=300 height=200>
+                <img src="assets/images/ARAS.jpg" alt="ARAS" width=300 height=200>
                 <h6>Students meeting the President</h6>
             </div>
-             <div class="col-sm3 gallery text-center">
-                <img src="../assets/images/Mikediskin.jpg" width=300 height=200>
+            <div class="col-sm3 gallery text-center">
+                <img src="assets/images/Mikediskin.jpg" alt="Mikediskin" width=300 height=200>
                 <h6>Mike Diskin Memorial event</h6>
             </div>
-             <div class="col-sm3 gallery text-center">
-                <img src="../assets/images/dance-festival.jpg" width=300 height=200>
+            <div class="col-sm3 gallery text-center">
+                <img src="assets/images/dance-festival.jpg" alt="dance-festival" width=300 height=200>
                 <h6>Students at the dance festival</h6>
             </div>
-             <div class="col-sm3 gallery text-center">
-                <img src="../assets/images/daffodilevent.jpg" width=300 height=200>
+            <div class="col-sm3 gallery text-center">
+                <img src="assets/images/daffodilevent.jpg" alt="daffodil event" width=300 height=200>
                 <h6>Students at daffodil day</h6>
             </div>
         </div>
@@ -74,18 +74,18 @@
             <p class="inline-block footermessage">
                 We have classes in Galway City and Knocknacarra.
                 <br> Contact Us:
-                <a href="#" target="_blank">
+                <a href="Contact.html" target="_blank">
                      <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
                     </a>
-                <a target="_blank" href="#">
+                <a target="_blank" href="https://www.facebook.com/Regina-Rogers-School-of-Ballet-568812096482190/">
                             <i class="fa fa-facebook infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
-                <a target="_blank" href="#">
+                <a target="_blank" href="https://twitter.com/Twitter">
                             <i class="fa fa-twitter infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
-                <a target="_blank" href="#">
+                <a target="_blank" href="https://www.instagram.com/instagram/">
                             <i class="fa fa-instagram infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
