--- a/Testimonial.html
+++ b/Testimonial.html
@@ -39,13 +39,13 @@
                     Each student, regardless of grade or ability, was given an equal opportunity to shine. Behind the scenes, Regina was giving us extra practice sessions, advice and constant encouragement. Ballet requires years of hard work and patience,
                     but the results are so rewarding. Elegance, determination and commitment are a few of the many traits Regina instills in her students. I attended her classes from senior infants until well into my college years. I will be forever grateful
                     to Regina, not only for the skills I have learned(and earned!), but for her kindness and friendship throughout.</p>
-                <img src="../assets/images/laura.jpg" width="400" height="340">
+                <img src="assets/images/laura.jpg" width="500" height="400">
                 </div>
             <div class="col-sm-1">
             </div>
             <div class="col-sm-5 testimonials">
                 <h5>Daragh Keaveney</h5>
-                <img src="../assets/images/Daragh.jpg" width="400" height="340">
+                <img src="assets/images/Daragh.jpg" width="500" height="400">
                 <p>I was a student with Regina for thirteen years, taking class twice a week in ballet and jazz. For all that time, Regina and all the various teachers I’ve had have been amazing. I received great technical training in my time with the school,
                     as well as so many performance opportunities. I have always been encouraged and supported by everyone at the school and that helped me go on to pursue further training and a career in dance. Regina helped me discover my love of dance
                     and performance at an early age and I wouldn’t be the dancer I am today without everything her and the teachers at Regina Rogers School of Ballet have done for me. Daragh was accepted into the Broadway Academy, New York.</p>
@@ -53,7 +53,7 @@
         
             <div class="col-sm-5 testimonials">
                 <h5>Gabriella Markov</h5>
-                <img src="../assets/images/gabriella.jpg" width="400" height="340">
+                <img src="assets/images/gabriella.jpg" width="500" height="400">
                 <p>“I’ve loved my year with Regina Rogers School of Ballet SO much, I don’t think I’ve ever loved Ballet more—-I’ve learned so much from brilliant teachers. The atmosphere is always fantastic, the girls were always kind to me, I’ve had fun
                     every time and I’ve learned twice as much from this atmosphere than any nasty one! One of the best experiences of my life was appearing on stage with the Perm State Ballet of Russia——-I will never ever forget it. Thank you for giving
                     me all those experiences”. Thank you for inspiring me. Senior student Gabriella Markov who returned home to Australia.</p>
@@ -65,7 +65,7 @@
                 <p>I began ballet at the age of 6 at the Regina Rogers School of Ballet and it was there that I developed my love for ballet. I gained great experiences from my time there, getting the opportunities to do summer schools with Russian trained
                     dancers was what made me want to go on and study ballet further at a more serious level. I loved all the opportunities we got to perform at all kinds of events and I am extremely grateful to Regina for all the help and support she
                     has given me over the 12 years I attended the school. Catherine went on to study ballet through College of Dance Dublin and London Studio Centre.</p>
-            <img src="../assets/images/Catherine.jpg" width="400" height="340">
+            <img src="assets/images/Catherine.jpg" width="500" height="400">
             </div>
         </div>
     </section>
@@ -73,24 +73,25 @@
         <div class="footermessage">
             <h7 class="uppercase general">Looking for ballet classes in galway?</h7><br/>
             <p class="inline-block footermessage">
-                We have classes in Galway City and Knocknacarra.
-                <br> Contact Us:
-                <a href="#" target="_blank">
+                    We have classes in Galway City and Knocknacarra.
+                    <br>
+                    Contact Us:
+                    <a href="Contact.html" target="_blank">
                      <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
                     </a>
-                <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.facebook.com/Regina-Rogers-School-of-Ballet-568812096482190/">
                             <i class="fa fa-facebook infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
-                <a target="_blank" href="#">
+                        <a target="_blank" href="https://twitter.com/Twitter">
                             <i class="fa fa-twitter infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
-                <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.instagram.com/instagram/">
                             <i class="fa fa-instagram infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
-            </p>
+                </p>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
