added responsive to multiple pages

--- a/Contact.html
+++ b/Contact.html
@@ -53,9 +53,9 @@
             <div class="col contact-heading">
                 <h4 class="cheader text-center">Contact Details</h4>
                 <ul>
-                    <li class="col-4 text-center">Regina Rogers</li>
-                    <li class="col-4 text-center">Phone: 091 522 267</li>
-                    <li class="col-4 text-center">Email: galwayballet@gmail.com</li>
+                    <li class="col-12 text-center">Regina Rogers</li>
+                    <li class="col-12 text-center"><a href:"tel:+35391522267">Phone: 091 522267</a></li>
+                    <li class="col-12 text-center"><a href:"mailto:galwayballet@gmail.com">Email:galwayballet@gmail.com</a></li>
                 </ul>
             </div>
         </div>
