made classes table responsive

--- a/Classes.html
+++ b/Classes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,7 @@
 <body>
     <header>
         <div class="navbar ">
-             <ul>
+            <ul>
                 <li><a href="index.html" class=" col-12  col-2"><i class="fa fa-home fa-lg"> Home</i></a></li>
                 <li><a href="Classes.html" class="active col-12  col-2"><i class="fa fa-graduation-cap fa-lg"> Classes</i></a></li>
                 <li><a href="News.html" class=" col-12  col-2"><i class="fa fa-calendar fa-lg"> News & Events</i></a></li>
@@ -32,164 +33,171 @@
         </br>
         <h2 class="headers">Galway Classes</h2>
         </br>
-        <table class="table">
-            <tr>
-                <th class="tablehead">Class</th>
-                <th class="tablehead">Monday</th>
-                <th class="tablehead">Tuesday</th>
-                <th class="tablehead">Wednesday</th>
-                <th class="tablehead">Thursday</th>
-                <th class="tablehead">Friday</th>
-                <th class="tablehead">Saturday</th>
-            </tr>
-            <tr>
-                <td>New Baby Ballerinas (4+)</td>
-                <td>-</td>
-                <td>2pm – 3pm</td>
-                <td>-</td>
-                <td>-</td>
-                <td>2pm – 3pm</td>
-                <td>-</td>
-            </tr>
-            <tr>
-              <td>Primary Ballet</td>
-                <td>-</td>
-                <td>3pm – 4pm</td>
-                <td>-</td>
-                <td>-</td>
-                <td>3pm – 4pm</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>Intermediate Ballet Class</td>
-                <td>-</td>
-                <td>4pm – 5pm</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>2pm – 3pm</td>
-            </tr>
-            <tr>
-                <td>Seniors Ballet</td>
-                <td>-</td>
-                <td>5pm – 6pm</td>
-                <td>-</td>
-                <td>-</td>
-                <td>4pm – 5pm</td>
-                <td>3pm – 4pm</td>
-            </tr>
-            <tr>
-                <td>Junior Jazz and Tap Dance</td>
-                <td>-</td>
-                <td>-</td>
-                <td>5pm – 6pm</td>
-                <td>5pm – 6pm</td>
-                <td>-</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>Senior Jazz & Tap Dance</td>
-                <td>-</td>
-                <td>-</td>
-                <td>6pm – 7pm</td>
-                <td>6pm – 7pm</td>
-                <td>-</td>
-                <td>-</td>
-            </tr>
-        </table>
+        <div class="responsive">
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <th class="tablehead">Class</th>
+                        <th class="tablehead">Monday</th>
+                        <th class="tablehead">Tuesday</th>
+                        <th class="tablehead">Wednesday</th>
+                        <th class="tablehead">Thursday</th>
+                        <th class="tablehead">Friday</th>
+                        <th class="tablehead">Saturday</th>
+                    </tr>
+                    <tr>
+                        <td>New Baby Ballerinas (4+)</td>
+                        <td>-</td>
+                        <td>2pm – 3pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>2pm – 3pm</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Primary Ballet</td>
+                        <td>-</td>
+                        <td>3pm – 4pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>3pm – 4pm</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Intermediate Ballet Class</td>
+                        <td>-</td>
+                        <td>4pm – 5pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>2pm – 3pm</td>
+                    </tr>
+                    <tr>
+                        <td>Seniors Ballet</td>
+                        <td>-</td>
+                        <td>5pm – 6pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>4pm – 5pm</td>
+                        <td>3pm – 4pm</td>
+                    </tr>
+                    <tr>
+                        <td>Junior Jazz and Tap Dance</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>5pm – 6pm</td>
+                        <td>5pm – 6pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Senior Jazz & Tap Dance</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>6pm – 7pm</td>
+                        <td>6pm – 7pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
         </br>
         <h2 class="headers">Knocknacarra Classes</h2>
         </br>
-        <table class="table">
-            <tr>
-                <th class="tablehead">Class</th>
-                <th class="tablehead">Monday</th>
-                <th class="tablehead">Tuesday</th>
-                <th class="tablehead">Wednesday</th>
-                <th class="tablehead">Thursday</th>
-                <th class="tablehead">Friday</th>
-                <th class="tablehead">Saturday</th>
-            </tr>
-            <tr>
-                <td>New Baby Ballerinas (4+)</td>
-                <td>2pm – 3pm</td>
-                <td>-</td>
-                <td>-</td>
-                <td>2pm – 3pm</td>
-                <td>-</td>
-                <td>-</td>
-            </tr>
-            <tr>
-              <td>Primary Ballet</td>
-                <td>3pm – 4pm</td>
-                <td>-</td>
-                <td>-</td>
-                <td>3pm – 4pm</td>
-                <td>-</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>Intermediate Ballet Class</td>
-                <td>4pm – 5pm</td>
-                <td>-</td>
-                <td>-</td>
-                <td>4pm – 5pm</td>
-                <td>-</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>Seniors Ballet</td>
-                <td>5pm – 6pm</td>
-                <td>-</td>
-                <td>-</td>
-                <td>5pm – 6pm</td>
-                <td>-</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>Junior Jazz and Tap Dance</td>
-                <td>5pm – 6pm</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>Senior Jazz & Tap Dance</td>
-                <td>6pm – 7pm</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-            </tr>
-        </table>
+        <div class="responsive">
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <th class="tablehead">Class</th>
+                        <th class="tablehead">Monday</th>
+                        <th class="tablehead">Tuesday</th>
+                        <th class="tablehead">Wednesday</th>
+                        <th class="tablehead">Thursday</th>
+                        <th class="tablehead">Friday</th>
+                        <th class="tablehead">Saturday</th>
+                    </tr>
+                    <tr>
+                        <td>New Baby Ballerinas (4+)</td>
+                        <td>2pm – 3pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>2pm – 3pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Primary Ballet</td>
+                        <td>3pm – 4pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>3pm – 4pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Intermediate Ballet Class</td>
+                        <td>4pm – 5pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>4pm – 5pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Seniors Ballet</td>
+                        <td>5pm – 6pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>5pm – 6pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Junior Jazz and Tap Dance</td>
+                        <td>5pm – 6pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Senior Jazz & Tap Dance</td>
+                        <td>6pm – 7pm</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
         </br>
     </section>
     <footer>
         <div class="footermessage">
-                <h7 class="uppercase general">Looking for ballet classes in galway?</h7><br/>
-                <p class="inline-block footermessage">
-                    We have classes in Galway City and Knocknacarra.
-                    <br>
-                    Contact Us:
-                    <a href="Contact.html" target="_blank">
+            <h7 class="uppercase general">Looking for ballet classes in galway?</h7><br/>
+            <p class="inline-block footermessage">
+                We have classes in Galway City and Knocknacarra.
+                <br> Contact Us:
+                <a href="Contact.html" target="_blank">
                      <i class="fa fa-phone-square infobutton" aria-hidden="true"></i>
                     </a>
-                        <a target="_blank" href="https://www.facebook.com/Regina-Rogers-School-of-Ballet-568812096482190/">
+                <a target="_blank" href="https://www.facebook.com/Regina-Rogers-School-of-Ballet-568812096482190/">
                             <i class="fa fa-facebook infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
-                        <a target="_blank" href="https://twitter.com/Twitter">
+                <a target="_blank" href="https://twitter.com/Twitter">
                             <i class="fa fa-twitter infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
-                        <a target="_blank" href="https://www.instagram.com/instagram/">
+                <a target="_blank" href="https://www.instagram.com/instagram/">
                             <i class="fa fa-instagram infobutton " aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
-                </p>
+            </p>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
