more responsive work and added link icons

--- a/Contact.html
+++ b/Contact.html
@@ -31,7 +31,7 @@
             <!---logo--->
         </div>
         <div class="row">
-            <div class="col-12 ">
+            <div class="col-12 layout">
                 <h3 class="contact-heading  text-center">CONTACT US!</h3>
                 <h5 class="text-center">Want to get in touch! Please use the contact form below. We will try to respond ASAP</h5>
                 </br>
@@ -54,8 +54,8 @@
                 <h4 class="cheader text-center">Contact Details</h4>
                 <ul>
                     <li class="col-12 text-center">Regina Rogers</li>
-                    <li class="col-12 text-center"><a href:"tel:+35391522267">Phone: 091 522267</a></li>
-                    <li class="col-12 text-center"><a href:"mailto:galwayballet@gmail.com">Email:galwayballet@gmail.com</a></li>
+                    <li class="col-12 text-center"><a href:"tel:+35391522267"><i class="fa fa-phone-square " aria-hidden="true"></i> :091 522267</a></li>
+                    <li class="col-12 text-center"><a href:"mailto:galwayballet@gmail.com"><i class="fa fa-envelope"></i> :galwayballet@gmail.com</a></li>
                 </ul>
             </div>
         </div>
