--- a/News.html
+++ b/News.html
@@ -42,12 +42,14 @@
                     <p class="fontsize">New beginners ballet at Cappagh Community Centre, starts Saturday 7th September 2019, 2pm to 2.45pm. Enrollment now open, contact Regina Rogers.</p>
                 </div>
                 <div class=" news ">
-                    <h6 class="newsheader  ">Summer Camp</h6>
+                    <h6 class="newsheader">Summer Camp</h6>
                     </br>
                     <img src="assets/images/summerCamp.jpg " alt="Summer Camp" class="center">
                     </br>
                     <p class="fontsize">We will be holding summer dance camps 1st and 3rd weeks of August for ages 8-16. Please contact us for more information.</p>
                 </div>
+            </div>
+            <div class="row">
                 <div class=" news ">
                     <h6 class="newsheader">Masterclasses with Katherine Lewis</h6>
                     </br>
@@ -62,7 +64,9 @@
                     </br>
                     <p class="fontsize">Exams for grades 1 - 3 will be held on 18th October in our Galway Studio. Please contact us for more information.</p>
                 </div>
-                <div class=" news ">
+            </div>
+            <div class="row">
+                <div class="news ">
                     <h6 class="newsheader">National Dance Championships and Twilight Competitions 2019</h6>
                     </br>
                     <img src="assets/images/NationalDanceChamps.jpg" alt="National Dance Champs" class="center">
